--- a/full-week.html
+++ b/full-week.html
@@ -11,7 +11,7 @@
     <p>
       <a href="index.html">View Today's Challenge</a>.
     </p>
-
+    <!--중첩된 요소는 상속됨-->
     <ol>
       <li>Repeat what I learned about HTML&CSS</li>
       <li>Do the exercise on HTML & CSS</li>
@@ -19,17 +19,17 @@
     </ol>
 
     <!--순서 목록-->
-    <ol>
+    <!-- <ol>
       <li>Monday</li>
       <li>Tuesday</li>
       <li>Wednesday</li>
-    </ol>
+    </ol> -->
 
     <!--비순서 목록-->
-    <ul>
+    <!-- <ul>
       <li>Apples</li>
       <li>Bananas</li>
       <li>Cookie</li>
-    </ul>
+    </ul> -->
 </body>
 </html>
