--- a/full-week.html
+++ b/full-week.html
@@ -7,15 +7,31 @@
     <title>My Upcoming Challenges</title>
 </head>
 <body>
-    <h1>My Upcoming Challenges</h1>
-    <p>
-      <a href="index.html">View Today's Challenge</a>.
-    </p>
+    <header>
+      <h1>My Upcoming Challenges</h1>
+      <p id="description">These are my goals for the next days</p>
+      <a href="index.html">View Today's Challenge</a>.      
+    </header>
     <!--중첩된 요소는 상속됨-->
-    <ol>
-      <li>Repeat what I learned about HTML&CSS</li>
-      <li>Do the exercise on HTML & CSS</li>
-      <li>Dive deeper into HTML & CSS and build more complex websites</li>
-    </ol>
+    <main>
+      <ol>
+        <li>
+          <h2>Tuesday, December 2nd</h2>
+          <p class="highlight-goal">Repeat what I learned about HTML&CSS</p>
+        </li>
+        <li>
+          <h2>Wednesday, December 3rd</h2>
+          <p class="highlight-goal">Do the exercise on HTML & CSS</p>
+        </li>
+        <li>
+          <h2>Thursday, December 4th</h2>
+          <p>Dive deeper into HTML & CSS and build more complex websites</p>
+          </li>
+        <li>
+          <h2>Friday, December 5th</h2>
+          <p>Learn all about forms</p>
+          </li>
+      </ol>
+    </main>
 </body>
 </html>
