--- a/full-week.html
+++ b/full-week.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-      <h1>My Upcoming Challenges</h1>
+      <h1>My Upcoming Challenges!</h1>
       <p id="description">These are my goals for the next days</p>
       <a href="index.html">View Today's Challenge</a>.      
     </header>
