--- a/full-week.html
+++ b/full-week.html
@@ -10,20 +10,20 @@
     <header>
       <h1>My Upcoming Challenges!</h1>
       <p id="description">These are my goals for the next days</p>
-      <a href="index.html">View Today's Challenge</a>.      
+      <a href="index.html">View Today's Challenge</a>
     </header>
     <!--중첩된 요소는 상속됨-->
     <main>
       <ol>
-        <li>
-          <h2>Tuesday, December 2nd</h2>
-          <p class="highlight-goal">Repeat what I learned about HTML&CSS</p>
+        <li class="highlight-goal">
+          <h2 >Tuesday, December 2nd</h2>
+          <p>Repeat what I learned about HTML&CSS</p>
         </li>
         <li>
           <h2>Wednesday, December 3rd</h2>
-          <p class="highlight-goal">Do the exercise on HTML & CSS</p>
+          <p>Do the exercise on HTML & CSS</p>
         </li>
-        <li>
+        <li class="highlight-goal">
           <h2>Thursday, December 4th</h2>
           <p>Dive deeper into HTML & CSS and build more complex websites</p>
           </li>
