--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 		<title>My Daily Challenge</title>
   </head>
   <body>
-    <!--이미지 불러올 수 없을 때 대체 혹은 대체 택스트-->
+    <main>
+          <!--이미지 불러올 수 없을 때 대체 혹은 대체 택스트-->
     <img src="images/challenges-trophy.jpg" alt="A trophy">
-    <h1>Daisy' Challenge for Monday, November 20th</h1>
-    <p id="todays-challenge">
-      Learn about the basics of web development -specifically dive into HTML &
-      CSS.
-    </p>
-    <p>
-      Explore the <a href="full-week.html">full week</a>.
-    </p>
+      <h1>Daisy' Challenge for <span>Wednesday, August 4th</span></h1>
+      <p id="todays-challenge">
+        Learn about the basics of web development -specifically dive into HTML &
+        CSS.
+      </p>
+    </main>
+    <footer>
+      <p>Explore the <a href="full-week.html">full week</a></p>
+    </footer>
   </body>
 </html>
