--- a/homework/index.html
+++ b/homework/index.html
@@ -2,27 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link href="styles/index.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <title>Basics Summary</title>
   </head>
   <body>
-    <main>
-      <img src="html-css.png" alt="logos">
-      <h1>HTML Summary</h1>
+    <h1>HTML & CSS Basics Summary</h1>
+    <img src="html-css.png" alt="logos">      
+    <main>     
+      <h2>HTML Summary</h2>
       <p>
         HTML (HyperText Markup Language) is used to define our page content, structure and meaning. You don't use it for styling purposes. Use CSS for that instead!
       </p>
       <ol>
-        <li>
+        <li class="highlight-goal">
           HTML uses "elements" to describe (annotate) content
         </li>
         <li>
           HTML elements typically have an opening tag, content and then a closing tag
         </li>
-        <li>
+        <li class="highlight-goal">
           You can also have void (empty) elements like images
         </li>
+        <li class="highlight-goal">
+          You can also configure elements with attributes
+        </li>
+        <li>
+          There's a long list of available elements but you'll gain experience over time, no worries.
+        </li>
       </ol>
+      <p>
+        Learn more about all available HTML elements on <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">the MDN HTML element reference</a>.
+      </p>
+      <h2>CSS Summary</h2>
+      <p>CSS (Cascading Style Sheets) is usedfor styling your page content.</p>
+      <ol>
+        <li>
+          Styles are assigned via property-value pairs
+        </li>
+        <li>
+          You can assign styles via the "style" attribute
+        </li>
+        <li class="highlight-goal">
+          To avoid code duplication, you typically use global styles (e.g. via the "style" element) instead
+        </li>
+        <li>
+          Alternatively, you can work with external stylesheet files which you "link" to
+        </li>
+        <li>
+          When working with CSS, concepts like "inheritance", "specificity" and the "box model" should be understood.
+        </li>
+      </ol>
+      <p>
+        Learn more about all available CSS properties and values on <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">the MDN CSS property reference</a>.
+      </p>
     </main>
+    <a href="html-css-basics-summary.pdf">Download PDF Summary</a>
+    <footer>
+      (c) Academind GmbH
+    </footer>
   </body>
 </html>
