--- a/homework/index.html
+++ b/homework/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link href="index.css" rel="stylesheet">
-    <title>Basics Summary</title>
+    <title>HTML & CSS Basics Summary</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>HTML & CSS Basics Summary</h1>
-    <img src="html-css.png" alt="logos">      
+    <header>
+      <h1>HTML & CSS Basics Summary</h1>
+      <img src="html-css.png" alt="HTML and CSS logos">   
+    </header>    
     <main>     
       <h2>HTML Summary</h2>
       <p>
         HTML (HyperText Markup Language) is used to define our page content, structure and meaning. You don't use it for styling purposes. Use CSS for that instead!
       </p>
-      <ol>
+      <ul>
         <li class="highlight-goal">
           HTML uses "elements" to describe (annotate) content
         </li>
@@ -29,7 +33,7 @@
         <li>
           There's a long list of available elements but you'll gain experience over time, no worries.
         </li>
-      </ol>
+      </ul>
       <p>
         Learn more about all available HTML elements on <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">the MDN HTML element reference</a>.
       </p>
@@ -56,8 +60,8 @@
         Learn more about all available CSS properties and values on <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">the MDN CSS property reference</a>.
       </p>
     </main>
-    <a href="html-css-basics-summary.pdf">Download PDF Summary</a>
     <footer>
+      <a href="html-css-basics-summary.pdf">Download PDF Summary</a>
       (c) Academind GmbH
     </footer>
   </body>
