--- a/full-week/index.html
+++ b/full-week/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="styles/shared.css" rel="stylesheet">
-    <link href="styles/full-week.css" rel="stylesheet">
+    <link href="/styles/shared.css" rel="stylesheet">
+    <link href="/styles/full-week.css" rel="stylesheet">
+    <link ref="icon" href="/images/favicon.ico" type="image/x-icon">
     <title>My Upcoming Challenges</title>
 </head>
 <body>
     <header>
       <h1>My Upcoming Challenges!</h1>
       <p id="description">These are my goals for the next days</p>
-      <a href="index.html">View Today's Challenge</a>
+      <a href="/index.html">View Today's Challenge</a>
     </header>
     <!--중첩된 요소는 상속됨-->
     <main>
