--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!--rel 링크의 유형을 정의하는 속성-->
     <link href="styles/shared.css" rel="stylesheet">
     <link href="styles/daily-challenge.css" rel="stylesheet">
+    <link ref="icon" href="images/favicon.ico" type="image/x-icon">
 		<title>My Daily Challenge</title>
   </head>
   <body>
@@ -19,7 +20,7 @@
       </p>
     </main>
     <footer>
-      <p>Explore the <a href="full-week.html">full week</a></p>
+      <p>Explore the <a href="/full-week/index.html">full week</a></p>
     </footer>
   </body>
 </html>
