--- a/Travel_page/index.html
+++ b/Travel_page/index.html
@@ -12,18 +12,24 @@
 </head>
 <body>
   <header>
-      <div id="page-logo">
-          <a href="index.html">Travel Goals</a>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="places.html">Destinations</li>
-          <li><a href="about.html">About</li>
-        </ul>
-      </nav>
+    <div id="page-logo">
+        <a href="index.html">Travel Goals</a>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="places.html"></a>Destinations</li>
+        <li><a href="about.html"></a>About</li>
+      </ul>
+    </nav>
   </header>
   <main>
-      <section></section>
+      <section id="hero">
+        <div id="hero-content">
+          <h1>Daisy's Travel Page</h1>
+          <p>Let's explore the world together!</p>
+          <a href="places.html">Discover Places</a>
+        </div>
+      </section>
       <section></section>
   </main>
   <footer></footer>
