--- a/Travel_page/index.html
+++ b/Travel_page/index.html
@@ -17,8 +17,8 @@
     </div>
     <nav>
       <ul>
-        <li><a href="places.html"></a>Destinations</li>
-        <li><a href="about.html"></a>About</li>
+        <li><a href="places.html">Destinations</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </header>
@@ -30,7 +30,23 @@
           <a href="places.html">Discover Places</a>
         </div>
       </section>
-      <section></section>
+      <section id="highlight">
+        <h2>Highlight</h2>
+        <ul id="destinations">
+          <li class="destination">
+            <img src="images/places/miami.jpg" alt="Miami streets on sunny day">
+            <p>Miami <strong>USA</strong></p>
+          </li>
+          <li class="destination">
+            <img src="images/places/munich.jpg" alt="Munich stadium in winter">
+            <p>Munich <strong>Germany</strong></p>           
+          </li>
+          <li class="destination">
+            <img src="images/places/barcelona.jpg" alt="Palm beach in Barcelona">
+            <p>Barcelona <strong>Spain</strong></p>              
+          </li>
+        </ul>
+      </section>
   </main>
   <footer></footer>
 </body>
