--- a/Travel_page/index.html
+++ b/Travel_page/index.html
@@ -30,7 +30,7 @@
           <a href="places.html">Discover Places</a>
         </div>
       </section>
-      <section id="highlight">
+      <section id="highlights">
         <h2>Highlight</h2>
         <ul id="destinations">
           <li class="destination">
@@ -48,6 +48,15 @@
         </ul>
       </section>
   </main>
-  <footer></footer>
+  <footer>
+    <ul>
+      <li>
+        <a href="https://www.instagram.com"><img src="images/icons/insta.png" alt="Instagram logo"></a>
+      </li>
+      <li>
+        <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="facebook logo"></a>
+      </li>
+    </ul>
+  </footer>
 </body>
 </html>
