--- a/Webfood/index.html
+++ b/Webfood/index.html
@@ -4,19 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebFood</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+  href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+  rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header id="main-header">
     <a href="index.html" id="logo">WebFood</a>
-  </header>
   <nav>
     <ul>
-      <li><a href="">Browse Meals</a>
+      <li>
+        <a href="">Browse Meals</a>
       </li>
-      <li><a href="">My Orders</a>
+      <li>
+        <a href="">My Orders</a>
       </li>
     </ul>
   </nav>
+  </header>  
   <main>
     <h1>Browse Our Delicious Meals</h1>
     <section id="latest-products">
@@ -24,16 +31,16 @@
         <li class="food-items">
           <article>
             <img src="images/risotto.jpg" alt="Delicious Risotto">
-            <div class="food-items-content">
+            <div class="food-item-content">
             <h2>Rissoto with Tiger Prawns</h2>
             <a href="" class="btn">Add to Cart</a>              
             </div>
           </article>
         </li>
-        <li>
+        <li class="food-items">
           <article>
             <img src="images/cheeseburgers.jpg" alt="Delicious Cheeseburgers">
-            <div class="food-items-content">
+            <div class="food-item-content">
             <h2>Cheeseburgers</h2>
             <a href="" class="btn">Add to Cart</a>              
             </div>
