--- a/Webfood/index.html
+++ b/Webfood/index.html
@@ -13,22 +13,39 @@
 <body>
   <header id="main-header">
     <a href="index.html" id="logo">WebFood</a>
-  <nav>
-    <ul>
-      <li>
-        <a href="">Browse Meals</a>
-      </li>
-      <li>
-        <a href="">My Orders</a>
-      </li>
-    </ul>
-  </nav>
-  </header>  
+    <nav>
+      <ul>
+        <li>
+          <a href="">Browse Meals</a>
+        </li>
+        <li>
+          <a href="">My Orders</a>
+        </li>
+      </ul>
+    </nav>
+    <a href="" class="menu-btn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </a>
+  </header>
+  <aside id="side-drawer">
+    <nav>
+      <ul>
+        <li>
+          <a href="">Browse Meals</a>
+        </li>
+        <li>
+          <a href="">My Orders</a>
+        </li>
+      </ul>
+    </nav>
+  </aside>
   <main>
     <h1>Browse Our Delicious Meals</h1>
     <section id="latest-products">
       <ul>
-        <li class="food-items">
+        <li class="food-item">
           <article>
             <img src="images/risotto.jpg" alt="Delicious Risotto">
             <div class="food-item-content">
@@ -37,7 +54,7 @@
             </div>
           </article>
         </li>
-        <li class="food-items">
+        <li class="food-item">
           <article>
             <img src="images/cheeseburgers.jpg" alt="Delicious Cheeseburgers">
             <div class="food-item-content">
